<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/secondButton"
        android:layout_width="229dp"
        android:layout_height="82dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="91dp"
        android:text="@string/secondButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstButton" />

    <Button
        android:id="@+id/thirdButton"
        android:layout_width="229dp"
        android:layout_height="82dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="91dp"
        android:text="@string/thirdButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondButton" />

    <Button
        android:id="@+id/firstButton"
        android:layout_width="229dp"
        android:layout_height="82dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="91dp"
        android:text="@string/firstButton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appImagen"
        tools:text="@string/firstButton_text" />

    <ImageView
        android:id="@+id/appImagen"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="168dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
